--- a/config-service/src/main/resources/application.yaml
+++ b/config-service/src/main/resources/application.yaml
@@ -1,14 +1,12 @@
 server:
-  port: 8000
+  port: 8081
 spring:
   cloud:
     config:
       server:
          git:
-           default-label: usuario-config-service
-             uri:https://github.com/devhuitzil/user-microservice
-             uri:https://github.com/devhuitzil/carro-microservice
-             uri:https://github.com/devhuitzil/moto-microservice
-           search-paths: config-data
+           default-label: usuario-config-server
+              uri: https://github.com/devhuitzil/Olymicroservice-curso 
+              search-paths: config-data
   application:
     name: config-service
